2010-09-03  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/Makefile.am: Use libdmcs.a for dmcsGen.

	* src/ContextGenerator.cpp: Set V[root] to maxBeliefSet()

	* include/generator/TopologyGenerator.h: Use constants for topology_type.

	* include/generator/ContextGenerator.h: Add topology_type.
	* src/staticGen.cpp: Adapt in the call.

	* include/QueryPlan.h: Remove ***1() methods.
	* src/QueryPlan.cpp: Likewise.

2010-09-01  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/ContextGenerator.cpp: Generate local_interfaces and minV.

	* include/generator/dmcsGen.h: More some typedef and #define to
	ContextGenerator.h

	* include/generator/ContextGenerator.h: More members for
	ContextGenerator: prefix, minV.

	* include/generator/TopologyGenerator.h: Use NeighborVec instead
	of NeighborList.
	* include/generator/DiamondTopoGenerator.h: Likewise.
	* src/staticGen.cpp: Likewise.

2010-09-01  Minh Dao Tran  <dao@kr.tuwien.ac.at>
	* include/generator/ContextGenerator.h: Finished generating
	local_kb and bridge_rules.
	* include/generator/dmcsGen.h: Likewise.
	* src/ContextGenerator.cpp: Likewise.
	* src/staticGen.cpp: Likewise.

	* src/Makefile.am: Add ContextGenerator.cpp and LogicVisitor.cpp
	to dmcsGen_SOURCES

2010-08-31  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/generator: new sub directory for generators' header
	files.
	* include/generator/TopologyGenerator.h: New file.
	* include/generator/ContextGenerator.h: Likewise.
	* include/generator/DiamondTopoGenerator.h: Likewise.
	* include/generator/DiamondOptTopoGenerator.h: Likewise.
	* include/generator/dmcsGen.h: Likewise.

	* src/dmcsGen.cpp: New file.
	* src/staticGen.cpp: Likewise.

	* include/Makefile.am: Add new header files for dmcsGen. Remove
	header files from genTest.

	* src/Makefile.am: add dmcsGen, remove genTest.

	* src/ContextGenerator: light weight implementation. No more use
	of Context, QueryPlan.

2010-08-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
